<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>OfficeStamper CLI</name>
    <groupId>pro.verron.office-stamper</groupId>
    <artifactId>office-stamper-cli</artifactId>
    <version>2.7.0</version>

    <packaging>jar</packaging>

    <properties>
        <vendor.name>Caring Coder</vendor.name>
        <copyright>Caring Coder@2025</copyright>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <finalName>${artifactId}-${version}</finalName>
        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>com.github.akman</groupId>
                    <artifactId>jpackage-maven-plugin</artifactId>
                    <version>0.1.5</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>jpackage</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <name>${artifactId}</name>
                        <appversion>${version}</appversion>
                        <copyright>${copyright}</copyright>
                        <vendor>${vendor.name}</vendor>
                        <mainjar>${artifactId}-${version}-jar-with-dependencies.jar</mainjar>
                        <input>target/</input>
                        <mainclass>pro.verron.officestamper.Main</mainclass>
                        <type>EXE</type>
                        <javaoptions>--enable-preview</javaoptions>
                        <dest>.</dest>
                        <icon>${project.basedir}/src/main/resources/app-icon.ico</icon>
                        <winconsole>false</winconsole>
                        <winmenu>true</winmenu>
                        <winshortcut>true</winshortcut>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.source}</target>
                    <release>${maven.compiler.source}</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>pro.verron.officestamper.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.github.akman</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>jpackage-installer</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.7.6</version>
        </dependency>

        <dependency>
            <groupId>pro.verron.office-stamper</groupId>
            <artifactId>engine</artifactId>
            <version>2.7.0</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>6.1.14</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>2.0.16</version>
        </dependency>
    </dependencies>

</project>
